bison_files/latexp3c.output
Terminals which are not used

   BACKSL
   INTEGER


State 7 conflicts: 2 shift/reduce
State 11 conflicts: 2 shift/reduce
State 30 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 81 conflicts: 4 reduce/reduce


Grammar

    0 $accept: latexstatement $end

    1 latexstatement: startdoc mainbody enddoc

    2 startdoc: LBEGIN DOCUMENT

    3 enddoc: END DOCUMENT

    4 mainbody: mainbody mainoption
    5         | mainoption

    6 mainoption: textoption
    7           | commentoption
    8           | latexoptions

    9 textoption: textoption wsorword
   10           | wsorword

   11 wsorword: WS
   12         | WORD

   13 commentoption: SPECCHAR textoption

   14 latexoptions: backsoptions
   15             | LCURLYB curlyboptions RCURLYB

   16 curlyboptions: fonts textoption

   17 backsoptions: beginendopts
   18             | sectionoptions
   19             | tableofcont
   20             | linespacing
   21             | pagenumbers
   22             | pagenuminit
   23             | spacing
   24             | fonts
   25             | specialchar
   26             | nonewpara
   27             | reference

   28 beginendopts: LBEGIN begcmds beginblock endbegin

   29 begcmds: CENTER
   30        | VERBATIM
   31        | SINGLE
   32        | ITEMIZE
   33        | ENUMERATE
   34        | TABLE begtableopts
   35        | TABULAR begtabularopts

   36 endbegin: END endcmds
   37         | endtableopts TABLE

   38 endcmds: CENTER
   39        | VERBATIM
   40        | SINGLE
   41        | ITEMIZE
   42        | ENUMERATE
   43        | TABULAR

   44 beginblock: beginendopts
   45           | textoption
   46           | entrylist
   47           | listblock

   48 listblock: listblock anitem
   49          | anitem

   50 anitem: ITEM textoption
   51       | beginendopts

   52 entrylist: entrylist anentry
   53          | anentry

   54 anentry: entry DBLBS
   55        | beginendopts

   56 entry: entry SPECCHAR textoption
   57      | textoption

   58 begtableopts: LSQRB position RSQRB

   59 begtabularopts: LCURLYB COLS RCURLYB

   60 position: H
   61         | T
   62         | B

   63 endtableopts: END
   64             | CAPTION LCURLYB textoption RCURLYB captionrest
   65             | labelrest

   66 captionrest: END
   67            | labelrest

   68 labelrest: LABEL LCURLYB WORD RCURLYB END

   69 sectionoptions: SECTION LCURLYB textoption RCURLYB
   70               | SUBSEC LCURLYB textoption RCURLYB

   71 tableofcont: TABOCON

   72 linespacing: RENEW LCURLYB BASELINES RCURLYB LCURLYB WORD RCURLYB

   73 pagenumbers: PAGENUM style2

   74 style2: ARABIC2
   75       | LROMAN2
   76       | CROMAN2
   77       | LALPH2
   78       | CALPH2

   79 @1: /* empty */

   80 pagenuminit: style1 LCURLYB WORD @1 RCURLYB

   81 style1: ARABIC1
   82       | LROMAN1
   83       | CROMAN1
   84       | LALPH1
   85       | CALPH1

   86 spacing: horvert LCURLYB WORD RCURLYB

   87 horvert: VSPACE
   88        | HSPACE

   89 fonts: RM
   90      | IT

   91 specialchar: SPECCHAR
   92            | LCURLYB
   93            | RCURLYB

   94 nonewpara: NOINDENT

   95 reference: REF LCURLYB WORD RCURLYB


Terminals, with rules where they appear

$end (0) 0
error (256)
BACKSL (258)
LBEGIN (259) 2 28
LCURLYB (260) 15 59 64 68 69 70 72 80 86 92 95
DOCUMENT (261) 2 3
RCURLYB (262) 15 59 64 68 69 70 72 80 86 93 95
END (263) 3 36 63 66 68
WORD (264) 12 68 72 80 86 95
WS (265) 11
SPECCHAR (266) 13 56 91
CENTER (267) 29 38
VERBATIM (268) 30 39
SINGLE (269) 31 40
ITEMIZE (270) 32 41
ENUMERATE (271) 33 42
TABULAR (272) 35 43
TABLE (273) 34 37
LSQRB (274) 58
RSQRB (275) 58
H (276) 60
T (277) 61
B (278) 62
COLS (279) 59
CAPTION (280) 64
LABEL (281) 68
DBLBS (282) 54
ITEM (283) 50
SECTION (284) 69
SUBSEC (285) 70
TABOCON (286) 71
RENEW (287) 72
BASELINES (288) 72
PAGENUM (289) 73
INTEGER (290)
ARABIC1 (291) 81
LROMAN1 (292) 82
CROMAN1 (293) 83
LALPH1 (294) 84
CALPH1 (295) 85
VSPACE (296) 87
HSPACE (297) 88
RM (298) 89
IT (299) 90
NOINDENT (300) 94
REF (301) 95
ARABIC2 (302) 74
LROMAN2 (303) 75
CROMAN2 (304) 76
LALPH2 (305) 77
CALPH2 (306) 78


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
latexstatement (53)
    on left: 1, on right: 0
startdoc (54)
    on left: 2, on right: 1
enddoc (55)
    on left: 3, on right: 1
mainbody (56)
    on left: 4 5, on right: 1 4
mainoption (57)
    on left: 6 7 8, on right: 4 5
textoption (58)
    on left: 9 10, on right: 6 9 13 16 45 50 56 57 64 69 70
wsorword (59)
    on left: 11 12, on right: 9 10
commentoption (60)
    on left: 13, on right: 7
latexoptions (61)
    on left: 14 15, on right: 8
curlyboptions (62)
    on left: 16, on right: 15
backsoptions (63)
    on left: 17 18 19 20 21 22 23 24 25 26 27, on right: 14
beginendopts (64)
    on left: 28, on right: 17 44 51 55
begcmds (65)
    on left: 29 30 31 32 33 34 35, on right: 28
endbegin (66)
    on left: 36 37, on right: 28
endcmds (67)
    on left: 38 39 40 41 42 43, on right: 36
beginblock (68)
    on left: 44 45 46 47, on right: 28
listblock (69)
    on left: 48 49, on right: 47 48
anitem (70)
    on left: 50 51, on right: 48 49
entrylist (71)
    on left: 52 53, on right: 46 52
anentry (72)
    on left: 54 55, on right: 52 53
entry (73)
    on left: 56 57, on right: 54 56
begtableopts (74)
    on left: 58, on right: 34
begtabularopts (75)
    on left: 59, on right: 35
position (76)
    on left: 60 61 62, on right: 58
endtableopts (77)
    on left: 63 64 65, on right: 37
captionrest (78)
    on left: 66 67, on right: 64
labelrest (79)
    on left: 68, on right: 65 67
sectionoptions (80)
    on left: 69 70, on right: 18
tableofcont (81)
    on left: 71, on right: 19
linespacing (82)
    on left: 72, on right: 20
pagenumbers (83)
    on left: 73, on right: 21
style2 (84)
    on left: 74 75 76 77 78, on right: 73
pagenuminit (85)
    on left: 80, on right: 22
@1 (86)
    on left: 79, on right: 80
style1 (87)
    on left: 81 82 83 84 85, on right: 80
spacing (88)
    on left: 86, on right: 23
horvert (89)
    on left: 87 88, on right: 86
fonts (90)
    on left: 89 90, on right: 16 24
specialchar (91)
    on left: 91 92 93, on right: 25
nonewpara (92)
    on left: 94, on right: 26
reference (93)
    on left: 95, on right: 27


state 0

    0 $accept: . latexstatement $end

    LBEGIN  shift, and go to state 1

    latexstatement  go to state 2
    startdoc        go to state 3


state 1

    2 startdoc: LBEGIN . DOCUMENT

    DOCUMENT  shift, and go to state 4


state 2

    0 $accept: latexstatement . $end

    $end  shift, and go to state 5


state 3

    1 latexstatement: startdoc . mainbody enddoc

    LBEGIN    shift, and go to state 6
    LCURLYB   shift, and go to state 7
    RCURLYB   shift, and go to state 8
    WORD      shift, and go to state 9
    WS        shift, and go to state 10
    SPECCHAR  shift, and go to state 11
    SECTION   shift, and go to state 12
    SUBSEC    shift, and go to state 13
    TABOCON   shift, and go to state 14
    RENEW     shift, and go to state 15
    PAGENUM   shift, and go to state 16
    ARABIC1   shift, and go to state 17
    LROMAN1   shift, and go to state 18
    CROMAN1   shift, and go to state 19
    LALPH1    shift, and go to state 20
    CALPH1    shift, and go to state 21
    VSPACE    shift, and go to state 22
    HSPACE    shift, and go to state 23
    RM        shift, and go to state 24
    IT        shift, and go to state 25
    NOINDENT  shift, and go to state 26
    REF       shift, and go to state 27

    mainbody        go to state 28
    mainoption      go to state 29
    textoption      go to state 30
    wsorword        go to state 31
    commentoption   go to state 32
    latexoptions    go to state 33
    backsoptions    go to state 34
    beginendopts    go to state 35
    sectionoptions  go to state 36
    tableofcont     go to state 37
    linespacing     go to state 38
    pagenumbers     go to state 39
    pagenuminit     go to state 40
    style1          go to state 41
    spacing         go to state 42
    horvert         go to state 43
    fonts           go to state 44
    specialchar     go to state 45
    nonewpara       go to state 46
    reference       go to state 47


state 4

    2 startdoc: LBEGIN DOCUMENT .

    $default  reduce using rule 2 (startdoc)


state 5

    0 $accept: latexstatement $end .

    $default  accept


state 6

   28 beginendopts: LBEGIN . begcmds beginblock endbegin

    CENTER     shift, and go to state 48
    VERBATIM   shift, and go to state 49
    SINGLE     shift, and go to state 50
    ITEMIZE    shift, and go to state 51
    ENUMERATE  shift, and go to state 52
    TABULAR    shift, and go to state 53
    TABLE      shift, and go to state 54

    begcmds  go to state 55


state 7

   15 latexoptions: LCURLYB . curlyboptions RCURLYB
   92 specialchar: LCURLYB .

    RM  shift, and go to state 24
    IT  shift, and go to state 25

    RM        [reduce using rule 92 (specialchar)]
    IT        [reduce using rule 92 (specialchar)]
    $default  reduce using rule 92 (specialchar)

    curlyboptions  go to state 56
    fonts          go to state 57


state 8

   93 specialchar: RCURLYB .

    $default  reduce using rule 93 (specialchar)


state 9

   12 wsorword: WORD .

    $default  reduce using rule 12 (wsorword)


state 10

   11 wsorword: WS .

    $default  reduce using rule 11 (wsorword)


state 11

   13 commentoption: SPECCHAR . textoption
   91 specialchar: SPECCHAR .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    WORD      [reduce using rule 91 (specialchar)]
    WS        [reduce using rule 91 (specialchar)]
    $default  reduce using rule 91 (specialchar)

    textoption  go to state 58
    wsorword    go to state 31


state 12

   69 sectionoptions: SECTION . LCURLYB textoption RCURLYB

    LCURLYB  shift, and go to state 59


state 13

   70 sectionoptions: SUBSEC . LCURLYB textoption RCURLYB

    LCURLYB  shift, and go to state 60


state 14

   71 tableofcont: TABOCON .

    $default  reduce using rule 71 (tableofcont)


state 15

   72 linespacing: RENEW . LCURLYB BASELINES RCURLYB LCURLYB WORD RCURLYB

    LCURLYB  shift, and go to state 61


state 16

   73 pagenumbers: PAGENUM . style2

    ARABIC2  shift, and go to state 62
    LROMAN2  shift, and go to state 63
    CROMAN2  shift, and go to state 64
    LALPH2   shift, and go to state 65
    CALPH2   shift, and go to state 66

    style2  go to state 67


state 17

   81 style1: ARABIC1 .

    $default  reduce using rule 81 (style1)


state 18

   82 style1: LROMAN1 .

    $default  reduce using rule 82 (style1)


state 19

   83 style1: CROMAN1 .

    $default  reduce using rule 83 (style1)


state 20

   84 style1: LALPH1 .

    $default  reduce using rule 84 (style1)


state 21

   85 style1: CALPH1 .

    $default  reduce using rule 85 (style1)


state 22

   87 horvert: VSPACE .

    $default  reduce using rule 87 (horvert)


state 23

   88 horvert: HSPACE .

    $default  reduce using rule 88 (horvert)


state 24

   89 fonts: RM .

    $default  reduce using rule 89 (fonts)


state 25

   90 fonts: IT .

    $default  reduce using rule 90 (fonts)


state 26

   94 nonewpara: NOINDENT .

    $default  reduce using rule 94 (nonewpara)


state 27

   95 reference: REF . LCURLYB WORD RCURLYB

    LCURLYB  shift, and go to state 68


state 28

    1 latexstatement: startdoc mainbody . enddoc
    4 mainbody: mainbody . mainoption

    LBEGIN    shift, and go to state 6
    LCURLYB   shift, and go to state 7
    RCURLYB   shift, and go to state 8
    END       shift, and go to state 69
    WORD      shift, and go to state 9
    WS        shift, and go to state 10
    SPECCHAR  shift, and go to state 11
    SECTION   shift, and go to state 12
    SUBSEC    shift, and go to state 13
    TABOCON   shift, and go to state 14
    RENEW     shift, and go to state 15
    PAGENUM   shift, and go to state 16
    ARABIC1   shift, and go to state 17
    LROMAN1   shift, and go to state 18
    CROMAN1   shift, and go to state 19
    LALPH1    shift, and go to state 20
    CALPH1    shift, and go to state 21
    VSPACE    shift, and go to state 22
    HSPACE    shift, and go to state 23
    RM        shift, and go to state 24
    IT        shift, and go to state 25
    NOINDENT  shift, and go to state 26
    REF       shift, and go to state 27

    enddoc          go to state 70
    mainoption      go to state 71
    textoption      go to state 30
    wsorword        go to state 31
    commentoption   go to state 32
    latexoptions    go to state 33
    backsoptions    go to state 34
    beginendopts    go to state 35
    sectionoptions  go to state 36
    tableofcont     go to state 37
    linespacing     go to state 38
    pagenumbers     go to state 39
    pagenuminit     go to state 40
    style1          go to state 41
    spacing         go to state 42
    horvert         go to state 43
    fonts           go to state 44
    specialchar     go to state 45
    nonewpara       go to state 46
    reference       go to state 47


state 29

    5 mainbody: mainoption .

    $default  reduce using rule 5 (mainbody)


state 30

    6 mainoption: textoption .
    9 textoption: textoption . wsorword

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    WORD      [reduce using rule 6 (mainoption)]
    WS        [reduce using rule 6 (mainoption)]
    $default  reduce using rule 6 (mainoption)

    wsorword  go to state 72


state 31

   10 textoption: wsorword .

    $default  reduce using rule 10 (textoption)


state 32

    7 mainoption: commentoption .

    $default  reduce using rule 7 (mainoption)


state 33

    8 mainoption: latexoptions .

    $default  reduce using rule 8 (mainoption)


state 34

   14 latexoptions: backsoptions .

    $default  reduce using rule 14 (latexoptions)


state 35

   17 backsoptions: beginendopts .

    $default  reduce using rule 17 (backsoptions)


state 36

   18 backsoptions: sectionoptions .

    $default  reduce using rule 18 (backsoptions)


state 37

   19 backsoptions: tableofcont .

    $default  reduce using rule 19 (backsoptions)


state 38

   20 backsoptions: linespacing .

    $default  reduce using rule 20 (backsoptions)


state 39

   21 backsoptions: pagenumbers .

    $default  reduce using rule 21 (backsoptions)


state 40

   22 backsoptions: pagenuminit .

    $default  reduce using rule 22 (backsoptions)


state 41

   80 pagenuminit: style1 . LCURLYB WORD @1 RCURLYB

    LCURLYB  shift, and go to state 73


state 42

   23 backsoptions: spacing .

    $default  reduce using rule 23 (backsoptions)


state 43

   86 spacing: horvert . LCURLYB WORD RCURLYB

    LCURLYB  shift, and go to state 74


state 44

   24 backsoptions: fonts .

    $default  reduce using rule 24 (backsoptions)


state 45

   25 backsoptions: specialchar .

    $default  reduce using rule 25 (backsoptions)


state 46

   26 backsoptions: nonewpara .

    $default  reduce using rule 26 (backsoptions)


state 47

   27 backsoptions: reference .

    $default  reduce using rule 27 (backsoptions)


state 48

   29 begcmds: CENTER .

    $default  reduce using rule 29 (begcmds)


state 49

   30 begcmds: VERBATIM .

    $default  reduce using rule 30 (begcmds)


state 50

   31 begcmds: SINGLE .

    $default  reduce using rule 31 (begcmds)


state 51

   32 begcmds: ITEMIZE .

    $default  reduce using rule 32 (begcmds)


state 52

   33 begcmds: ENUMERATE .

    $default  reduce using rule 33 (begcmds)


state 53

   35 begcmds: TABULAR . begtabularopts

    LCURLYB  shift, and go to state 75

    begtabularopts  go to state 76


state 54

   34 begcmds: TABLE . begtableopts

    LSQRB  shift, and go to state 77

    begtableopts  go to state 78


state 55

   28 beginendopts: LBEGIN begcmds . beginblock endbegin

    LBEGIN  shift, and go to state 6
    WORD    shift, and go to state 9
    WS      shift, and go to state 10
    ITEM    shift, and go to state 79

    textoption    go to state 80
    wsorword      go to state 31
    beginendopts  go to state 81
    beginblock    go to state 82
    listblock     go to state 83
    anitem        go to state 84
    entrylist     go to state 85
    anentry       go to state 86
    entry         go to state 87


state 56

   15 latexoptions: LCURLYB curlyboptions . RCURLYB

    RCURLYB  shift, and go to state 88


state 57

   16 curlyboptions: fonts . textoption

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 89
    wsorword    go to state 31


state 58

    9 textoption: textoption . wsorword
   13 commentoption: SPECCHAR textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    WORD      [reduce using rule 13 (commentoption)]
    WS        [reduce using rule 13 (commentoption)]
    $default  reduce using rule 13 (commentoption)

    wsorword  go to state 72


state 59

   69 sectionoptions: SECTION LCURLYB . textoption RCURLYB

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 90
    wsorword    go to state 31


state 60

   70 sectionoptions: SUBSEC LCURLYB . textoption RCURLYB

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 91
    wsorword    go to state 31


state 61

   72 linespacing: RENEW LCURLYB . BASELINES RCURLYB LCURLYB WORD RCURLYB

    BASELINES  shift, and go to state 92


state 62

   74 style2: ARABIC2 .

    $default  reduce using rule 74 (style2)


state 63

   75 style2: LROMAN2 .

    $default  reduce using rule 75 (style2)


state 64

   76 style2: CROMAN2 .

    $default  reduce using rule 76 (style2)


state 65

   77 style2: LALPH2 .

    $default  reduce using rule 77 (style2)


state 66

   78 style2: CALPH2 .

    $default  reduce using rule 78 (style2)


state 67

   73 pagenumbers: PAGENUM style2 .

    $default  reduce using rule 73 (pagenumbers)


state 68

   95 reference: REF LCURLYB . WORD RCURLYB

    WORD  shift, and go to state 93


state 69

    3 enddoc: END . DOCUMENT

    DOCUMENT  shift, and go to state 94


state 70

    1 latexstatement: startdoc mainbody enddoc .

    $default  reduce using rule 1 (latexstatement)


state 71

    4 mainbody: mainbody mainoption .

    $default  reduce using rule 4 (mainbody)


state 72

    9 textoption: textoption wsorword .

    $default  reduce using rule 9 (textoption)


state 73

   80 pagenuminit: style1 LCURLYB . WORD @1 RCURLYB

    WORD  shift, and go to state 95


state 74

   86 spacing: horvert LCURLYB . WORD RCURLYB

    WORD  shift, and go to state 96


state 75

   59 begtabularopts: LCURLYB . COLS RCURLYB

    COLS  shift, and go to state 97


state 76

   35 begcmds: TABULAR begtabularopts .

    $default  reduce using rule 35 (begcmds)


state 77

   58 begtableopts: LSQRB . position RSQRB

    H  shift, and go to state 98
    T  shift, and go to state 99
    B  shift, and go to state 100

    position  go to state 101


state 78

   34 begcmds: TABLE begtableopts .

    $default  reduce using rule 34 (begcmds)


state 79

   50 anitem: ITEM . textoption

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 102
    wsorword    go to state 31


state 80

    9 textoption: textoption . wsorword
   45 beginblock: textoption .
   57 entry: textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    SPECCHAR  reduce using rule 57 (entry)
    DBLBS     reduce using rule 57 (entry)
    $default  reduce using rule 45 (beginblock)

    wsorword  go to state 72


state 81

   44 beginblock: beginendopts .
   51 anitem: beginendopts .
   55 anentry: beginendopts .

    LBEGIN    reduce using rule 51 (anitem)
    LBEGIN    [reduce using rule 55 (anentry)]
    END       reduce using rule 44 (beginblock)
    END       [reduce using rule 51 (anitem)]
    END       [reduce using rule 55 (anentry)]
    WORD      reduce using rule 55 (anentry)
    WS        reduce using rule 55 (anentry)
    CAPTION   reduce using rule 44 (beginblock)
    CAPTION   [reduce using rule 51 (anitem)]
    CAPTION   [reduce using rule 55 (anentry)]
    LABEL     reduce using rule 44 (beginblock)
    LABEL     [reduce using rule 51 (anitem)]
    LABEL     [reduce using rule 55 (anentry)]
    ITEM      reduce using rule 51 (anitem)
    $default  reduce using rule 44 (beginblock)


state 82

   28 beginendopts: LBEGIN begcmds beginblock . endbegin

    END      shift, and go to state 103
    CAPTION  shift, and go to state 104
    LABEL    shift, and go to state 105

    endbegin      go to state 106
    endtableopts  go to state 107
    labelrest     go to state 108


state 83

   47 beginblock: listblock .
   48 listblock: listblock . anitem

    LBEGIN  shift, and go to state 6
    ITEM    shift, and go to state 79

    $default  reduce using rule 47 (beginblock)

    beginendopts  go to state 109
    anitem        go to state 110


state 84

   49 listblock: anitem .

    $default  reduce using rule 49 (listblock)


state 85

   46 beginblock: entrylist .
   52 entrylist: entrylist . anentry

    LBEGIN  shift, and go to state 6
    WORD    shift, and go to state 9
    WS      shift, and go to state 10

    $default  reduce using rule 46 (beginblock)

    textoption    go to state 111
    wsorword      go to state 31
    beginendopts  go to state 112
    anentry       go to state 113
    entry         go to state 87


state 86

   53 entrylist: anentry .

    $default  reduce using rule 53 (entrylist)


state 87

   54 anentry: entry . DBLBS
   56 entry: entry . SPECCHAR textoption

    SPECCHAR  shift, and go to state 114
    DBLBS     shift, and go to state 115


state 88

   15 latexoptions: LCURLYB curlyboptions RCURLYB .

    $default  reduce using rule 15 (latexoptions)


state 89

    9 textoption: textoption . wsorword
   16 curlyboptions: fonts textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    $default  reduce using rule 16 (curlyboptions)

    wsorword  go to state 72


state 90

    9 textoption: textoption . wsorword
   69 sectionoptions: SECTION LCURLYB textoption . RCURLYB

    RCURLYB  shift, and go to state 116
    WORD     shift, and go to state 9
    WS       shift, and go to state 10

    wsorword  go to state 72


state 91

    9 textoption: textoption . wsorword
   70 sectionoptions: SUBSEC LCURLYB textoption . RCURLYB

    RCURLYB  shift, and go to state 117
    WORD     shift, and go to state 9
    WS       shift, and go to state 10

    wsorword  go to state 72


state 92

   72 linespacing: RENEW LCURLYB BASELINES . RCURLYB LCURLYB WORD RCURLYB

    RCURLYB  shift, and go to state 118


state 93

   95 reference: REF LCURLYB WORD . RCURLYB

    RCURLYB  shift, and go to state 119


state 94

    3 enddoc: END DOCUMENT .

    $default  reduce using rule 3 (enddoc)


state 95

   80 pagenuminit: style1 LCURLYB WORD . @1 RCURLYB

    $default  reduce using rule 79 (@1)

    @1  go to state 120


state 96

   86 spacing: horvert LCURLYB WORD . RCURLYB

    RCURLYB  shift, and go to state 121


state 97

   59 begtabularopts: LCURLYB COLS . RCURLYB

    RCURLYB  shift, and go to state 122


state 98

   60 position: H .

    $default  reduce using rule 60 (position)


state 99

   61 position: T .

    $default  reduce using rule 61 (position)


state 100

   62 position: B .

    $default  reduce using rule 62 (position)


state 101

   58 begtableopts: LSQRB position . RSQRB

    RSQRB  shift, and go to state 123


state 102

    9 textoption: textoption . wsorword
   50 anitem: ITEM textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    $default  reduce using rule 50 (anitem)

    wsorword  go to state 72


state 103

   36 endbegin: END . endcmds
   63 endtableopts: END .

    CENTER     shift, and go to state 124
    VERBATIM   shift, and go to state 125
    SINGLE     shift, and go to state 126
    ITEMIZE    shift, and go to state 127
    ENUMERATE  shift, and go to state 128
    TABULAR    shift, and go to state 129

    $default  reduce using rule 63 (endtableopts)

    endcmds  go to state 130


state 104

   64 endtableopts: CAPTION . LCURLYB textoption RCURLYB captionrest

    LCURLYB  shift, and go to state 131


state 105

   68 labelrest: LABEL . LCURLYB WORD RCURLYB END

    LCURLYB  shift, and go to state 132


state 106

   28 beginendopts: LBEGIN begcmds beginblock endbegin .

    $default  reduce using rule 28 (beginendopts)


state 107

   37 endbegin: endtableopts . TABLE

    TABLE  shift, and go to state 133


state 108

   65 endtableopts: labelrest .

    $default  reduce using rule 65 (endtableopts)


state 109

   51 anitem: beginendopts .

    $default  reduce using rule 51 (anitem)


state 110

   48 listblock: listblock anitem .

    $default  reduce using rule 48 (listblock)


state 111

    9 textoption: textoption . wsorword
   57 entry: textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    $default  reduce using rule 57 (entry)

    wsorword  go to state 72


state 112

   55 anentry: beginendopts .

    $default  reduce using rule 55 (anentry)


state 113

   52 entrylist: entrylist anentry .

    $default  reduce using rule 52 (entrylist)


state 114

   56 entry: entry SPECCHAR . textoption

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 134
    wsorword    go to state 31


state 115

   54 anentry: entry DBLBS .

    $default  reduce using rule 54 (anentry)


state 116

   69 sectionoptions: SECTION LCURLYB textoption RCURLYB .

    $default  reduce using rule 69 (sectionoptions)


state 117

   70 sectionoptions: SUBSEC LCURLYB textoption RCURLYB .

    $default  reduce using rule 70 (sectionoptions)


state 118

   72 linespacing: RENEW LCURLYB BASELINES RCURLYB . LCURLYB WORD RCURLYB

    LCURLYB  shift, and go to state 135


state 119

   95 reference: REF LCURLYB WORD RCURLYB .

    $default  reduce using rule 95 (reference)


state 120

   80 pagenuminit: style1 LCURLYB WORD @1 . RCURLYB

    RCURLYB  shift, and go to state 136


state 121

   86 spacing: horvert LCURLYB WORD RCURLYB .

    $default  reduce using rule 86 (spacing)


state 122

   59 begtabularopts: LCURLYB COLS RCURLYB .

    $default  reduce using rule 59 (begtabularopts)


state 123

   58 begtableopts: LSQRB position RSQRB .

    $default  reduce using rule 58 (begtableopts)


state 124

   38 endcmds: CENTER .

    $default  reduce using rule 38 (endcmds)


state 125

   39 endcmds: VERBATIM .

    $default  reduce using rule 39 (endcmds)


state 126

   40 endcmds: SINGLE .

    $default  reduce using rule 40 (endcmds)


state 127

   41 endcmds: ITEMIZE .

    $default  reduce using rule 41 (endcmds)


state 128

   42 endcmds: ENUMERATE .

    $default  reduce using rule 42 (endcmds)


state 129

   43 endcmds: TABULAR .

    $default  reduce using rule 43 (endcmds)


state 130

   36 endbegin: END endcmds .

    $default  reduce using rule 36 (endbegin)


state 131

   64 endtableopts: CAPTION LCURLYB . textoption RCURLYB captionrest

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    textoption  go to state 137
    wsorword    go to state 31


state 132

   68 labelrest: LABEL LCURLYB . WORD RCURLYB END

    WORD  shift, and go to state 138


state 133

   37 endbegin: endtableopts TABLE .

    $default  reduce using rule 37 (endbegin)


state 134

    9 textoption: textoption . wsorword
   56 entry: entry SPECCHAR textoption .

    WORD  shift, and go to state 9
    WS    shift, and go to state 10

    $default  reduce using rule 56 (entry)

    wsorword  go to state 72


state 135

   72 linespacing: RENEW LCURLYB BASELINES RCURLYB LCURLYB . WORD RCURLYB

    WORD  shift, and go to state 139


state 136

   80 pagenuminit: style1 LCURLYB WORD @1 RCURLYB .

    $default  reduce using rule 80 (pagenuminit)


state 137

    9 textoption: textoption . wsorword
   64 endtableopts: CAPTION LCURLYB textoption . RCURLYB captionrest

    RCURLYB  shift, and go to state 140
    WORD     shift, and go to state 9
    WS       shift, and go to state 10

    wsorword  go to state 72


state 138

   68 labelrest: LABEL LCURLYB WORD . RCURLYB END

    RCURLYB  shift, and go to state 141


state 139

   72 linespacing: RENEW LCURLYB BASELINES RCURLYB LCURLYB WORD . RCURLYB

    RCURLYB  shift, and go to state 142


state 140

   64 endtableopts: CAPTION LCURLYB textoption RCURLYB . captionrest

    END    shift, and go to state 143
    LABEL  shift, and go to state 105

    captionrest  go to state 144
    labelrest    go to state 145


state 141

   68 labelrest: LABEL LCURLYB WORD RCURLYB . END

    END  shift, and go to state 146


state 142

   72 linespacing: RENEW LCURLYB BASELINES RCURLYB LCURLYB WORD RCURLYB .

    $default  reduce using rule 72 (linespacing)


state 143

   66 captionrest: END .

    $default  reduce using rule 66 (captionrest)


state 144

   64 endtableopts: CAPTION LCURLYB textoption RCURLYB captionrest .

    $default  reduce using rule 64 (endtableopts)


state 145

   67 captionrest: labelrest .

    $default  reduce using rule 67 (captionrest)


state 146

   68 labelrest: LABEL LCURLYB WORD RCURLYB END .

    $default  reduce using rule 68 (labelrest)
